--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1><b>hiii</b></h1>
-     <img src="C:/Users/Abin/OneDrive/Documents/New folder/WhatsApp Image 2025-11-10 at 23.11.00_ede89078.jpg" alt="WhatsApp Image" />
+     <img src="WhatsApp Image 2025-11-10 at 23.11.00_ede89078.jpg" alt="WhatsApp Image" />
     </body>
+
 </html>
